fix off-canvas and add movile menu nav, make it show on small screen only.

--- a/public/css/mystyles.css
+++ b/public/css/mystyles.css
@@ -57,7 +57,10 @@ HERO
   padding: 80px 0px;
   height: 400px;
   background-image: url("../img/dark_embroidery/dark_embroidery.png");
-  max-height: 100%;
+  }
+.hero-content > a  {
+  max-width: 100%;
+  max-height:100%;
 }
 
 .hero h1,
